# Manaburn

./: CMakeLists.txt  vcpkg.json
shaders/: basic_shader.vert
src/engine/: engine.cpp  engine.h  manaburn.cpp  mesh.cpp  mesh.h  texture.cpp  texture.h
src/util/: types.h
src/vulkan/: buffer.h  command.cpp  command.h  descriptors.cpp  descriptors.h  device.cpp  device.h  fence.h  image_buffer.h  index_buffer.h  pipeline_builder.cpp  pipeline_builder.h  semaphore.h  swapchain.cpp  swapchain.h  uniform_buffer.h  vertex_buffer.h  vk.cpp  vk.h  vk_interface.cpp  vk_interface.h  window.cpp  window.h
